Fix #119384: Outliner crash extend mode toggle on objects sharing data

This builds upon 8e060b44da04

Above commit also checked shared data against the **active** object,
however objects not being active can also share data with other objects
in multi-object-editing. This is now checked, so the shared icon is used
for them as well as disabeling "extend" (same as in 8e060b44da04).

Noticed other issues with this feature:
- extending should only show in the tooltip for pose and editmode
(`outliner_item_mode_toggle` ignores other modes for extending)
- removing a particular item (if it is not the active) from a mode does
not work well/at all.
- these will be addressed separately though